home/static/css/style.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
nav img {
  max-width: 50px;
}
nav .navbar-brand {
  margin: 0;
}
.navbar {
  padding: 0 0.5rem;
  background-color: #AB3A3E;
}
nav .nav-link {
  font-size: 20px;
  font-family: "Cairo", sans-serif;
  transition-duration: 500ms;
}


.link-unstyled, .link-unstyled:visited, .link-unstyled:hover, .link-unstyled:active, .link-unstyled:focus, .link-unstyled:active:hover {
    font-style: inherit;
    color: inherit;
    background-color: transparent;
    font-size: inherit;
    text-decoration: none;
    font-variant: inherit;
    font-weight: inherit;
    line-height: inherit;
    font-family: inherit;
    border-radius: inherit;
    border: inherit;
    outline: inherit;
    box-shadow: inherit;
    padding: inherit;
    vertical-align: inherit;
}

.readmore {
  padding: 7px;
   cursor: pointer;
   transition-duration: 500ms;
}

.readmore:hover {
   color: #E62579;
}

header {
  text-align: start;
  height: 400px;
  background-image: url(/static/img/2.png);
  margin-bottom: 50px;
  background-position: center;
  background-size: cover;
}
header h1 {
  font-family: "Cairo", sans-serif;
  padding-top: 150px;
  color: #fff;
  position: relative;
  text-align: center;
}
header h1::after {
  content: "";
  position: absolute;
  right: 50%;
  width: 50px;
  height: 5px;
  background-color: #fff;
  bottom: -20px;
  transform: translate(50%, 0);
}

body {
  padding: 0;
  margin: 0;
  overflow-x: hidden;
  text-align: start;
  scroll-behavior: smooth;
}

ul, ol {
  list-style: none;
  padding: 0;
}

.home-p {
  background-image: url(/static/img/h-1.png);
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  height: 772px;
  background-color: #000;
}
.home-p .tex {
  text-align: start;
  position: absolute;
  width: 600px;
  top: 50%;
  left: 50%;
  transform: translate(0, -50%);
  z-index: 3;
}
.home-p .tex h1 {
  color: #fff;
  font-family: "Cairo", sans-serif;
  font-weight: bold;
}
.home-p .tex p {
  color: #fff;
  font-family: "Cairo", sans-serif;
}
.home-p .tex button {
  padding: 15px 10px;
  color: #E62579;
  background-color: #fff;
  border: none;
  font-family: "Cairo", sans-serif;
  transition-duration: 500ms;
  border-radius: 5px;
}
.home-p .tex button:hover {
  background-color: #392d2d;
  color: #fff;
}
.video-container .scrollLink {
  background-image: url(/static/img/p-1.png);
  display: block;
  width: 40px;
  height: 60px;
  border-radius: 37px;
  border: 2px solid #fff;
  border-top-color: white;
  border-right-color: white;
  border-bottom-color: white;
  border-left-color: white;
  border-top-color: white;
  border-right-color: white;
  border-bottom-color: white;
  border-left-color: white;
  position: absolute;
  bottom: 15px;
  left: 0;
  right: 0;
  margin: auto;
  cursor: pointer;
  background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

.about {
  padding-top: 80px;
  background-color: #000;
}
.about .content .counter-content {
  text-align: center;
  font-size: 25px;
  font-family: "Cairo", sans-serif;
  background: linear-gradient(to right, #F29222, #E62579);
  background-clip: border-box;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  padding-bottom: 15px;
}
.about .content .counter-content .icon-box {
  border: 1px solid #E62579;
  height: 125px;
  width: 125px;
  margin: 20px auto;
  transform: rotate(45deg);
}
.about .content .counter-content .icon-box .fas {
  font-size: 70px;
  margin: 25px auto;
  transform: rotate(-45deg);
}
.about .content .counter-content .counter {
  font-size: 50px;
}
.about .content .counter-content p {
  padding: 20px 0;
  margin: 0;
}

@media (max-width: 1000px) {
  .tex {
    transform: translate(-50%, -50%) !important;
    text-align: center !important;
    background-image: linear-gradient(90deg, #F2922280, #E6257987);
    padding: 20px 0;
  }
}
@media (max-width: 600px) {
  .tex {
    width: 300px !important;
  }
  .tex h1 {
    font-size: 15px;
  }
  .tex p {
    font-size: 12px;
  }
  .tex button {
    padding: 10px 5px !important;
    font-size: 15px;
  }
}
.video {
    position: relative;
    padding-bottom: 75%; /* 16:9 */
    height: 0;
  }

  .video iframe {
  position: absolute;
  right: 50%;
  transform: translate(50%, 0);
  padding: 10px;
  max-width: 1100px;
  max-height: 480px;
}

.video-container{
  height: 100vh;
  background-image: url(/static/img/2.png);
  padding-top: 60px;
  position: relative;
}
.text-container {
  position: relative;
}

.blog {
  background-image: linear-gradient(90deg, #F29222, #E62579);
  padding: 50px 0;
}
.blog .card-1,
.blog .card-2 {
  text-align: center;
  color: #fff;
  font-family: "Cairo", sans-serif;
  border: none;
  box-shadow: 2px 3px 8px #000;
}
.blog .card-1 a,
.blog .card-1 h5,
.blog .card-2 a,
.blog .card-2 h5 {
  color: #E62579;
}
.blog .card-1 .card-body {
  background-color: #44061b;
}
.blog .card-2 .card-body {
  background-color: #000;
}

.footer{
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.contact {
  padding: 10px 0;
  background-color: #6B2427;
}
.contact img {
  max-width: 100px;
}
.contact p {
  font-family: "Cairo", sans-serif;
  color: #fff;
  line-height: 25px;
}
.contact ul {
  padding: 0;
  margin: 0;
}
.contact li {
  color: #fff;
}
.contact h5 {
  font-size: 30px;
  font-family: "Cairo", sans-serif;
  background: linear-gradient(to right, #F29222, #E62579);
  background-clip: border-box;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.contact .fas {
  font-size: 25px;
  background: linear-gradient(to right, #F29222, #E62579);
  background-clip: border-box;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.contact a {
  color: #fff;
}
.contact .flt {
  cursor: pointer;
}
.contact .flt li {
  float: right;
  padding: 5px;
  font-size: 35px;
  background: linear-gradient(to right, #F29222, #E62579);
  background-clip: border-box;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.news .card {
  margin-bottom: 25px;
}
.news .card-title {
  color: #E62579;
}
.news .card-text {
  color: #666666;
}
.news .card-footer {
  background-image: linear-gradient(90deg, #F29222, #E62579);
  color: #fff;
}
.news .text-muted {
  color: #fff !important;
  font-family: "Cairo", sans-serif;
}
.news .p-hos {
  font-family: "Cairo", sans-serif;
  font-weight: 500;
  color: #666666;
  font-size: 25px;
  line-height: 40px;
}

.team {
  margin-top: 50px;
  margin-bottom: 50px;
}
.team .clearr {
  display: none;
  clear: both;
}
.team .clear-fix {
  clear: both;
}
.team .team-box {
  margin-top: 20px;
  padding-right: 20px;
}
.team .team-box img {
  max-width: 100%;
  padding: 0;
  margin: 0;
  transition-duration: 500ms;
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  filter: grayscale(100%);
}
.team .team-box img:hover {
  -webkit-filter: none;
  -moz-filter: none;
  filter: none;
}
.team .team-box .caption {
  text-align: center;
  background-color: #2b2c2f;
  text-transform: uppercase;
  color: #fff;
  border-radius: 0 0 10px 10px;
  margin: 0;
  position: relative;
  height: 137px;
}

.team .team-box .blog-caption {
  text-align: center;
  background-color: #2b2c2f;
  color: #fff;
  border-radius: 0 0 10px 10px;
  margin: 0;
  position: relative;
}

.team .team-box .blog-caption h3 {
  font-size: 20px;
  margin: 0;
  padding: 7px;
  cursor: pointer;
  transition-duration: 500ms;
}

.team .team-box .caption h3 {
  font-size: 20px;
  margin: 0;
  padding: 15px;
  cursor: pointer;
  transition-duration: 500ms;
}
.team .team-box .caption h3::after {
  content: "";
  top: 45%;
  right: 50%;
  width: 50%;
  height: 2px;
  background-color: #E62579;
  position: absolute;
  transform: translate(50%, 0);
}
.team .team-box .caption h3:hover {
  color: #E62579;
}
.team .team-box .blog-caption h3:hover {
  color: #E62579;
}
.team .team-box .caption p {
  padding-bottom: 15px;
  margin-top: 20px;
}

@media (max-width: 990px) {
  .clearr {
    display: block !important;
  }
}
/*# sourceMappingURL=style.css.map */

